Configuracion_APIs/API-Usuarios/api-usuarios-serv.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-usuarios
spec:
  type: LoadBalancer
  selector:
    app: api-usuarios
  ports:
  - protocol: TCP
    port: 9000
    targetPort: 9000
